- Fixed bug #50282 (xmlrpc_encode_request() changes object into array in calling function)